added nav header

--- a/index.html
+++ b/index.html
@@ -54,17 +54,21 @@
     <!-- Link to your CSS file -->
   </head>
   <body style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
-    <div class="start-tour-button">
-      <button id="startTourButton" class="Button" role="button">
-        <img
-          src="./assets/images/tour-guide.png"
-          height="24"
-          width="24"
-          class="tour-icon"
-          alt="Tour-guide"
-        />
-           Start Tour
-      </button>
+    <div class="nav-header">
+      <i href="#" class="fa-solid fa-house"></i>
+      <h1>Temperature Converter</h1>
+      <div class="start-tour-button">
+        <button id="startTourButton" class="Button" role="button">
+          <img
+            src="./assets/images/tour-guide.png"
+            height="24"
+            width="24"
+            class="tour-icon"
+            alt="Tour-guide"
+          />
+             Start Tour
+        </button>
+      </div>
     </div>
     <div class="containers" style="margin-top: 4rem; margin-bottom: 3rem;">
       <div class="title">
